# 6502

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generateMakefile.sh
asm/acia_test/: Makefile  acia_test.asm  acia_test.lst  acia_test.map  linker.ld
asm/adc_test/: Makefile  adc_test.asm
asm/loop_test/: Makefile  loop_test.asm
asm/quit_test/: Makefile  quit_test.asm
asm/stack_test/: Makefile  linker.ld  stack_test.asm
asm/subroutine_test/: Makefile  subroutine_test.asm
include/core/: acia.h  bus.h  cpu6502.h  memory.h
include/util/: log.h  tools.h  unit.h
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  acia.c  bus.c  cpu6502.c  memory.c
src/tests/: CMakeLists.txt  t0001.c
src/util/: CMakeLists.txt  log.c  tools.c
